--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,11 @@
   ],
   "routes": [
     {
+      "handle": "vercel",
+      "src": "/api/(.*)",
+      "method": "GET,HEAD,PUT,PATCH,POST,DELETE,OPTIONS"
+    },
+    {
       "src": "/(.*)",
       "dest": "/"
     }
