--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fullstack_mern6",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "start": "node .",
     "dev": "node --watch ."
